Fix z-index issue in navbar and singlePage components

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -97,6 +97,7 @@ nav{
             align-items: center;
             justify-content: center;
             font-size: 24px;
+            z-index: 998;
          
             &.active{
                 right: 0 !important;
