--- a/src/routes/singlePage/singlePage.scss
+++ b/src/routes/singlePage/singlePage.scss
@@ -189,6 +189,7 @@
       .mapContainer {
         width: 100%;
         height: 200px;
+        z-index: 100;
       }
 
       .buttons {
